[project]
name = "ImagesCameras"
version = "1.0.0"
requires-python = ">= 3.9"
description = "ToolBox for Image Processing based on Tensor."
readme = "README.md"
dependencies = ["pillow", "kornia", "imagesize", "oyaml", "jaxtyping", "einops", "setuptools", "matplotlib",
    "numpy", "opencv-python", "torch", "torchaudio", "torchvision", "torchmetrics", "tqdm", "scikit-image",
    "pytorch_similarity @ git+https://github.com/yuta-hi/pytorch_similarity.git"]

[project.urls]
Homepage = "https://github.com/Azorgz/ImagesCameras.git"
Repository = "https://github.com/Azorgz/ImagesCameras.git"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.lint.per-file-ignores]
"__init__.py" = ["F401", "D100", "D104"]

target-version = "py39"
