[project]
name = "imagescameras"
version = "1.0.0"
description = "ToolBox for Image Processing based on Tensor."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Aurelien Godet", email = "aurelien.godet@grenoble-inp.fr"}]

dependencies = [
    "pillow", "kornia", "imagesize", "oyaml", "jaxtyping", "einops",
    "setuptools", "matplotlib", "numpy", "opencv-python", "torch",
    "torchaudio", "torchvision", "torchmetrics", "tqdm", "scikit-image",
    "torch-similarity @ git+https://github.com/yuta-hi/pytorch_similarity.git"
]

[project.urls]
Homepage = "https://github.com/Azorgz/ImagesCameras.git"
Repository = "https://github.com/Azorgz/ImagesCameras.git"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["Image", "Metrics", "Cameras", "Geometry", "Wrappers", "Vizualisation"]