[project]
name = "ImagesCameras"
description = "ToolBox for Image Processing based on Tensor."
keywords = ["computer vision", "deep learning", "pytorch"]
requires-python = ">=3.9"
version = "1.0.0"
readme = "README.md"
authors = [{name = "Aurelien Godet", email = "aurelien.godet@grenoble-inp.fr"}]

dependencies = [
    "pillow", "kornia", "imagesize", "oyaml", "jaxtyping", "einops",
    "setuptools", "matplotlib", "numpy", "opencv-python", "torch",
    "torchaudio", "torchvision", "torchmetrics", "tqdm", "scikit-image",
    "torch-similarity @ git+https://github.com/yuta-hi/pytorch_similarity.git"]


[tool.setuptools.packages.find]
exclude = ["docs*", "test*", "examples*"]
namespaces = false

[project.urls]
Homepage = "https://github.com/Azorgz/ImagesCameras.git"
Repository = "https://github.com/Azorgz/ImagesCameras.git"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = true
license-files = ["LICENSE"]
include-package-data = false
#packages = ["ImagesCameras", "Image", "Metrics", "Cameras", "Geometry", "Wrappers", "Visualizer"]